<resources>
    <string name="app_name">Outfit Studio</string>
    <string name="api_base_url_dev">http://192.168.1.101:5000/api/</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="title_home">Home</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Full Name</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_register">Register</string>
    <string name="action_to_register">Don\'t have an account? Register</string>
    <string name="action_to_login">Already have an account? Login</string>
</resources>
